--- a/package.json
+++ b/package.json
@@ -9,11 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^1.0.6",
+    "axios": "^1.2.0",
+    "bcryptjs": "^2.4.3",
+    "font-awesome": "^4.7.0",
+    "font-awesome-icons": "^1.6.0",
+    "js-cookie": "^3.0.1",
+    "mongoose": "^6.7.3",
     "next": "13.0.5",
+    "next-auth": "^4.17.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.6",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
+    "@types/react": "^18.0.25",
     "autoprefixer": "^10.4.13",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
