--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
+# NEXTAUTH_URL=http://localhost:3000
+# NEXTAUTH_SECRET=somethingsecret
 MONGODB_URI=mongodb+srv://mystore:amit%40123@cluster0.ozhagac.mongodb.net/mystore?retryWrites=true&w=majority
